--- a/data_science/center_factor.ipynb
+++ b/data_science/center_factor.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        " (9, 1)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "[0, 2, 3, 0, 1, 3]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[0, 2, 3]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "[0, 1, 3]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -291,13 +291,299 @@
        "Counter({0: 2, 5: 1})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "friends_of_friend(users[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interests = [\n",
+    "    (0, \"Hadoop\"), (0, \"Big Data\"), (0, \"HBase\"), (0, \"Java\"),\n",
+    "    (0, \"Spark\"), (0, \"Storm\"), (0, \"Cassandra\"),\n",
+    "    (1, \"NoSQL\"), (1, \"MongoDB\"), (1, \"Cassandra\"), (1, \"HBase\"),\n",
+    "    (1, \"Posrgres\"), (2, \"Python\"), (2, \"scikit-learn\"), (2, \"scipy\"),\n",
+    "    (2, \"Numpy\"), (2, \"statsmodel\"), (2, \"Pandas\"), (3, \"R\"),\n",
+    "    (3, \"statistics\"), (3, \"regression\"), (3, \"probability\"),\n",
+    "    (4, \"machine learning\"), (4, \"regression\"), (4, \"decision trees\"), (4, \"libsvm\"),\n",
+    "    (5, \"Python\"), (5, \"R\"), (5, \"Java\"), (5, \"C++\"),\n",
+    "    (5, \"Haskell\"), (5, \"programming languages\"), (6, \"statistics\"), (6, \"probability\"),\n",
+    "    (6, \"mathematics\"), (6, \"theory\"), (7, \"machine learning\"), (7, \"scikit-learn\"),\n",
+    "    (7, \"Mahout\"), (7, \"neural networks\"), (8, \"neural networks\"), (8, \"deep learning\"),\n",
+    "    (8, \"Big Data\"), (8, \"artifical intelligence\"), (9, \"Hadoop\"),\n",
+    "    (9, \"Java\"), (9, \"MapReduce\"), (9, \"Big Data\")\n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_scientists_who_like(target_interest):\n",
+    "    # finding users which had the same target_interest\n",
+    "    return [user_id\n",
+    "           for user_id, user_interest in interests\n",
+    "           if user_interest == target_interest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_scientists_who_like(\"Python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are interests, values are list of user_id\n",
+    "user_ids_by_interest = defaultdict(list)\n",
+    "\n",
+    "for user_id, interest in interests:\n",
+    "    user_ids_by_interest[interest].append(user_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are user_id, values are lists of user interest \n",
+    "interests_by_user_id = defaultdict(list)\n",
+    "\n",
+    "for user_id, interest in interests:\n",
+    "    interests_by_user_id[user_id].append(interest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def most_common_interests_with(user):\n",
+    "    return Counter(interested_user_id\n",
+    "                   for interest in interests_by_user_id[user[\"id\"]]\n",
+    "                   for interested_user_id in user_ids_by_interest[interest]\n",
+    "                   if interested_user_id != user[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 2})"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_common_interests_with(users[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salaries_and_tenures = [(83000, 8.7), (88000, 8.1),\n",
+    "                       (48000, 0.7), (76000, 6),\n",
+    "                       (69000, 6.5), (76000, 7.5),\n",
+    "                       (60000, 2.5), (83000, 10),\n",
+    "                       (48000, 1.9), (63000, 4.2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are years, values are lists of salary\n",
+    "salary_by_tenure = defaultdict(list)\n",
+    "\n",
+    "for salary, tenure in salaries_and_tenures:\n",
+    "    salary_by_tenure[tenure].append(salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are years, each value is average salary\n",
+    "average_salary_by_tenure = {\n",
+    "    tenure : sum(salaries) / len(salaries)\n",
+    "    for tunere, salaries in salary_by_tenure.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {8.7: [83000],\n",
+       "             8.1: [88000],\n",
+       "             0.7: [48000],\n",
+       "             6: [76000],\n",
+       "             6.5: [69000],\n",
+       "             7.5: [76000],\n",
+       "             2.5: [60000],\n",
+       "             10: [83000],\n",
+       "             1.9: [48000],\n",
+       "             4.2: [63000]})"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary_by_tenure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tenure_bucket(tenure):\n",
+    "    if tenure < 2:\n",
+    "        return \"Less than two\"\n",
+    "    elif tenure < 5:\n",
+    "        return \"Between 2 and 5\"\n",
+    "    else:\n",
+    "        return \"Above 5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are salary range, values are lists of salary from range\n",
+    "salary_by_tenure_bucket = defaultdict(list)\n",
+    "\n",
+    "for salary, tenure in salaries_and_tenures:\n",
+    "    bucket = tenure_bucket(tenure)\n",
+    "    salary_by_tenure_bucket[bucket].append(salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keys are salary range, values means salary average\n",
+    "average_salary_by_bucket = {\n",
+    "    tenure_bucket : sum(salaries) / len(salaries)\n",
+    "    for tenure_bucket, salaries in salary_by_tenure_bucket.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Above 5': 79166.66666666667,\n",
+       " 'Less than two': 48000.0,\n",
+       " 'Between 2 and 5': 61500.0}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_salary_by_bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_item(xs):\n",
+    "    return min(xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert smallest_item([10, 20, 5, 40]) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert smalles_item([1, 0, -1, 2]) == -1"
    ]
   },
   {
