--- a/data_science/center_factor.ipynb
+++ b/data_science/center_factor.ipynb
@@ -588,6 +588,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CountingClicker:\n",
+    "    def __init__(self, count = 0):\n",
+    "        self.count = count\n",
+    "        \n",
+    "    def click(self, num_times=1):\n",
+    "        # Clicking\n",
+    "        self.count += num_times\n",
+    "        \n",
+    "    def read(self):\n",
+    "        return self.count\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.count = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clicker = CountingClicker()\n",
+    "assert clicker.read() == 0, \"Counter should start from 0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clicker.click()\n",
+    "clicker.click()\n",
+    "assert clicker.read() == 2, \"After 2 clicked, should be 2\"\n",
+    "clicker.reset()\n",
+    "assert clicker.read() == 0, \"After reset, should be 0 again\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NoResetClicker(CountingClicker):\n",
+    "    # change a reset func\n",
+    "    def reset(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clicker2 = NoResetClicker()\n",
+    "assert clicker2.read() == 0\n",
+    "clicker2.click()\n",
+    "assert clicker2.read() == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clicker2.reset()\n",
+    "assert clicker2.read() == 1, \"Reset func should not change anything\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
